--- a/index.html
+++ b/index.html
@@ -186,9 +186,10 @@
 
             <!--Links-->
             <section>
-                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/nextgen-aire-06-22/">https://rank-fortress-digital-agency.github.io/nextgen-aire-06-22/</a><br>
-                <a target="_bLank" href="http://nextgen-aire-06-22.s3-website.ap-northeast-2.amazonaws.com">http://nextgen-aire-06-22.s3-website.ap-northeast-2.amazonaws.com</a><br>
-                <a target="_bLank" href="https://melodious-phoenix-0fc637.netlify.app/">https://melodious-phoenix-0fc637.netlify.app/</a><br>
+                <a target="_bLank" href="https://rank-fortress-digital-agency.github.io/nextgen-aire-07-22/">https://rank-fortress-digital-agency.github.io/nextgen-aire-07-22/</a><br>
+                <a target="_bLank" href="http://nextgen-aire-07-22.s3-website-ap-southeast-1.amazonaws.com">http://nextgen-aire-07-22.s3-website-ap-southeast-1.amazonaws.com</a><br>
+                <a target="_bLank" href="https://superb-tarsier-c66d21.netlify.app/">https://superb-tarsier-c66d21.netlify.app/</a><br>
+                <a target="_bLank" href="https://sites.google.com/view/nextgen-aire/">https://sites.google.com/view/nextgen-aire/</a><br>
             </section>
 
         </div>
